Quick fix for dark mode styles

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -564,6 +564,17 @@ body.dark {
     color: white;
   }
 
+  article.upcoming_post {
+    color: white !important;
+    background-color: transparent;
+    h3 {
+      color: white;
+    }
+    &:hover {
+      background-color: transparent;
+    }
+  }
+
   article {
     @include mono-bg;
     box-shadow: $bg--shadow;
